# MediaPlayer

./: .gitignore  LICENSE  README.md
androidplayer/: settings.gradle.kts
androidplayer/app/: build.gradle.kts
androidplayer/app/src/androidTest/java/com/example/andriodplayer/: ExampleInstrumentedTest.kt
androidplayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.cpp~
androidplayer/app/src/main/cpp/lib/pkgconfig/: libavformat.pc  libavutil.pc  libswscale.pc
androidplayer/app/src/main/java/com/example/androidplayer/: MainActivity.java
androidplayer/app/src/main/res/layout/: activity_main.xml
androidplayer/app/src/test/java/com/example/andriodplayer/: ExampleUnitTest.kt
androidplayer/gradle/wrapper/: gradle-wrapper.properties
main/cpp/: AAudioRender.cpp  ANWRender.cpp  CMakeLists.txt  native-lib.cpp
main/cpp/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libpostproc.pc  libswresample.pc
main/java/com/example/androidplayer/: MainActivity.java  Player.java
main/res/layout/: activity_main.xml
